fixed some overflow css on home page and sidebar

--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -1,210 +1,202 @@
 .home-container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex: auto;
-    flex-direction: column;
-    position: fixed;
-    left: 200px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex: auto;
+  flex-direction: column;
+  position: fixed;
+  left: 200px;
 
-    background-color: black;
+  background-color: black;
 }
 
 .above-home-text {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .above-home-text > h3 {
-    color: var(--lighter-alabaster);
-    font-family: soleil, sans-serif;
-    font-size: 22px;
-    font-weight: 400;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    text-shadow: 1px 1px 2px black;
+  color: var(--lighter-alabaster);
+  font-family: soleil, sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-shadow: 1px 1px 2px black;
 
-    margin-left: 20px;
-    margin-top: 15px;
-
+  margin-left: 20px;
+  margin-top: 15px;
 }
 
 .above-home-text > p {
-    margin-right: 15%;
-    color: var(--lighter-alabaster);
-    font-family: soleil, sans-serif;
-    text-shadow: 1px 1px 2px black;
-    font-size: 18px;
+  margin-right: 15%;
+  color: var(--lighter-alabaster);
+  font-family: soleil, sans-serif;
+  text-shadow: 1px 1px 2px black;
+  font-size: 18px;
 
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 .above-home {
-    position: relative;
-    left: 0;
-    top: -5;
-    height: 450px;
-    width: 100%;
+  position: relative;
+  height: 450px;
+  width: 100%;
 }
 
 #coffee {
-    position: absolute;
-    z-index: -100;
-    width: 100%;
-    height: 512px;
-    object-fit: cover;
-    object-position: 50% 40%;
+  position: absolute;
+  z-index: -100;
+  width: 100%;
+  height: 512px;
+  object-fit: cover;
+  object-position: 50% 40%;
 }
 
 .contain-widgets {
-    height: 50%;
-    width: 90%;
-    display: flex;
-    align-items: center;
+  height: 50%;
+  width: 90%;
+  display: flex;
+  align-items: end;
+  margin-bottom: 10px;
 }
 
 .notes-preview-top {
-    padding-bottom: 15px;
+  padding-bottom: 15px;
 }
 
 .notes-preview-top > p {
-    color: white;
-    font-family: soleil, sans-serif;
-    margin-left: 3%;
-    margin-bottom: 6px;
+  color: white;
+  font-family: soleil, sans-serif;
+  margin-left: 3%;
+  margin-bottom: 6px;
 }
 
 .notes-preview-top > p > i {
-    font-size: 12px;
-    margin-left: 8px;
-    color: var(--evernote-green);
+  font-size: 12px;
+  margin-left: 8px;
+  color: var(--evernote-green);
 }
 
 .notes-preview {
-    background-color: var(--background-secondary);
-    border-radius: 8px;
-    -webkit-box-shadow: 1px 2px 6px rgba(0, 0, 0, .3);
-    box-shadow: 1px 2px 6px rgba(0, 0, 0, .3);
+  background-color: var(--background-secondary);
+  border-radius: 8px;
+  -webkit-box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.3);
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    margin-left: 2%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+  margin-left: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 
-    height: 80%;
-    width: 55%;
+  height: 80%;
+  width: 55%;
 
-    outline: 1px solid transparent;
+  outline: 1px solid transparent;
 
-    /* z-index: 1; */
+  /* z-index: 1; */
 }
 
 .notes-preview-bottom {
-    display: flex;
-    justify-content: center;
-    height: 280px;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 280px;
+  width: 100%;
 }
 
 #no-notes {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    color: var(--sidebar-font);
-    text-align: center;
-    margin: 0px 25px 50px 25px;
-    align-self: center;
-    line-height: 1.7em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  color: var(--sidebar-font);
+  text-align: center;
+  margin: 0px 25px 50px 25px;
+  align-self: center;
+  line-height: 1.7em;
 }
 
 .inner-notes {
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  width: 22%;
+  background-color: #333;
+  border-radius: 5px;
 
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    width: 22%;
-    background-color: #333;
-    border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
 
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
+  box-shadow: 0px 1px 2px 5px rgba(0, 0, 0, 0.15);
 
-    box-shadow: 0px 1px 2px 5px rgba(0, 0, 0, 0.15);
-
-
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    overflow: hidden;
-    position: relative;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  overflow: hidden;
+  position: relative;
 }
 
 .inner-notes:hover {
-    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
-
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
 }
 
 #bot-date {
-    position: absolute;
-    bottom: 0;
+  position: absolute;
+  bottom: 0;
 }
 
 #pg-title,
 #pg-snippet,
 #pg-date {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 #pg-title {
-    color: white;
-    font-weight: bold;
-    font-size: 14px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    overflow-wrap: anywhere;
-
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  overflow-wrap: anywhere;
 }
 
 #pg-snippet {
-    color: var(--sidebar-font);
-    font-size: 14px;
-    overflow-wrap: anywhere;
-    white-space: pre-wrap;
+  color: var(--sidebar-font);
+  font-size: 14px;
+  overflow-wrap: anywhere;
+  white-space: pre-wrap;
 }
 
 #pg-date {
-    color: var(--sidebar-font);
-    font-size: 12px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+  color: var(--sidebar-font);
+  font-size: 12px;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
-
 
 #snippet-box {
-    overflow: hidden;
-    margin-bottom: 30px;
+  overflow: hidden;
+  margin-bottom: 30px;
 }
-
 
 /* smaller computer screen (like 24"?) */
 @media screen and (max-width: 1366px) {
-    .above-home {
-        height: 350px;
-    }
+  .above-home {
+    height: 350px;
+  }
 }
-
 
 /* smaller computer screen (like 13") */
 @media screen and (max-width: 1180px) {
-    .right-icons {
-        margin-right: 35%;
-    }
+  .right-icons {
+    margin-right: 35%;
+  }
 
-    #today {
-        margin-right: 20%;
-    }
+  #today {
+    margin-right: 20%;
+  }
 
-    .contain-widgets {
-        width: 80%;
-    }
-
+  .contain-widgets {
+    width: 80%;
+  }
 }
